# simple-rts

./: CMakeLists.txt  README.md
data/: default.tcl  defaults.cfg  keymap.cfg
scripts/: copy-data-to-bundle.sh  fetch-and-build-sdl-mixer.sh  fetch-and-build-sdl.sh
src/: clientextras.cpp  collide.cpp  collide.h  command.cpp  config.h  console.cpp  cube.h  editing.cpp  fpumath.h  gfx.cpp  gfx.h  gfxe.cpp  gfxe.h  input.cpp  input.h  main.cpp  menus.cpp  meta_info.h  monster.cpp  platform.h  platform_mac.mm  platform_unix.cpp  platform_win32.cpp  player.cpp  player.h  protos.h  renderextras.cpp  rendermd2.cpp  rendertext.cpp  serverutil.cpp  sound.cpp  tcl.cpp  tcl.h  tcl.inl  tcl_expr.cpp  test.cpp  tools.cpp  tools.h  unit.cpp  unit.h  (+8 more)
src/enet/: unix.c
src/enet/include/enet/CVS/: ._Entries.Extra
src/old/: clientgame.cpp  cube.h  mac.mm  menus.cpp  physics.cpp  rendergl.cpp  server.cpp  serverbrowser.cpp  tools.cpp  tools.h  unix.cpp  win32.cpp  worldio.cpp
